--- a/templates/tmux.conf
+++ b/templates/tmux.conf
@@ -19,7 +19,7 @@ bind C-a send-prefix -2
 set -g history-limit 5000
 
 # Reload configuration
-bind r source-file ~/.tmux.conf \; display '~\.tmux.conf sourced
+bind r source-file ~/.tmux.conf \; display '~\.tmux.conf sourced'
 
 # Use vi-mode keys
 set-window-option -g mode-keys vi
